--- a/backend/app/templates/landing.html
+++ b/backend/app/templates/landing.html
@@ -46,7 +46,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg sticky-top p-3">
+    <nav class="navbar navbar-expand-lg sticky-top py-4 px-3">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <span class="brand-icon" style="font-size: 2.5rem;">🌿</span>
